@@ -64,11 +64,12 @@ class LoginController extends JController
 
 		$model = &$this->getModel('login');
 		$credentials = $model->getState('credentials');
-
+		$return = $model->getState('return');
+		
 		$result = $app->login($credentials, array('action' => 'core.login.admin'));
 
 		if (!JError::isError($result)) {
-			$app->redirect('index.php');
+			$app->redirect($return);
 		}
 
 		parent::display();
