@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<install type="module" version="1.0.0">
+<install
+	type="module"
+	version="1.6.0"
+	client="administrator">
 	<name>Login Form</name>
 	<author>Joomla! Project</author>
 	<creationDate>March 2005</creationDate>
@@ -10,12 +13,20 @@
 	<version>1.6.0</version>
 	<description>DESCLOGINFORM</description>
 	<files>
-		<filename module="mod_login">mod_login.php</filename>
+		<filename
+			module="mod_login">mod_login.php</filename>
 	</files>
 	<fields>
-		<field name="usesecure" type="radio" default="0" label="Encrypt Login Form" description="Submit encrypted login data (requires SSL)">
-			<option value="0">JNo</option>
-			<option value="1">JYes</option>
+		<field
+			name="usesecure"
+			type="radio"
+			default="0"
+			label="Encrypt Login Form"
+			description="Submit encrypted login data (requires SSL)">
+			<option
+				value="0">JNo</option>
+			<option
+				value="1">JYes</option>
 		</field>
 	</fields>
 	<fields
